--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
@@ -2597,12 +2597,11 @@ style.
   /* toc模块美化 */
   /* 由苏晓河进行编写以及调整 */
   /* 时间：2025年3月7日 */
-
   :root {
     --sxiaohe-toc-link-color: #505050;
   }
   [data-theme=dark] {
-    --toc-link-color: rgba(255, 255, 255, 0.8);
+    --sxiaohe-toc-link-color: rgba(255, 255, 255, 0.8);
   }
   /* toc点击卡片 */
   #aside-content #card-toc .toc-content .toc-link {
