--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/console.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/console.pug
@@ -1,9 +1,64 @@
-div#console
+div.eject.c-c#console
     //- 标头
-    div.console-head
+    div.eject-head-btns.c-c
         span 控制中心
         div.close-btn(onclick="ctrl.hideConsole()" href="javascript:void(0);")
             i.fas.fa-circle-xmark
+
+    //- 音乐控制器
+    div.console-mainbox.item-show#console-music-item-main
+        div#console-music-cover
+        div#console-music-title 
+            a#console-music-title-text(style="display:inline-block;") 曲名
+        div#console-music-author
+            a#console-music-author-text(style="display:inline-block;") 作者
+        div.console-progressbar-div
+            div#progress-low
+                a#progress-low-btn --:--
+            div#music-progressbar
+                div#p_bar_bg
+                    div#p_bar
+            div#progress-high
+                a#progress-high-btn --:--
+        div#console-music-ctrl-btns
+            div#music-ctrl-first
+                a#music-ctrl-btn-first
+                    i.fas.fa-shuffle
+            div#music-ctrl-left
+                a#music-ctrl-btn-left(onclick="ctrl.musicBackward()" title="上一曲" href="javascript:void(0);" rel="external nofollow" data-pjax-state="external")
+                    i.fas.fa-backward
+            div#music-ctrl-center
+                a#music-ctrl-btn-center(onclick="ctrl.musicSwitch()" title="音乐开关" href="javascript:void(0);" rel="external nofollow" data-pjax-state="external")
+                    i.fas.fa-play
+            div#music-ctrl-right
+                a#music-ctrl-btn-right(onclick="ctrl.musicForward()" title="下一曲" href="javascript:void(0);" rel="external nofollow" data-pjax-state="external")
+                    i.fas.fa-forward
+            div#music-ctrl-end
+                a#music-ctrl-btn-end
+                    i.fas.fa-indent
+        div.console-progressbar-div
+            div#volume-low
+                a#volume-low-btn
+                    i.fas.fa-volume-off
+            div#music-volumebar
+                div#v_bar_bg
+                    div#v_bar
+            div#volume-high
+                a#volume-high-btn
+                    i.fas.fa-volume-high
+
+    div.console-mainbox#console-music-item-list
+        div.console-list-head
+            a.headline 当前歌单
+            a.music-list-title 网易云
+        div.console-list-body
+            ol#console-music-list
+        div.console-list-foot
+    div.console-mainbox.item-show#console-songsheet-item-list
+        div.console-list-head
+            a.headline 歌单列表
+            a.footline#songsheet-title
+        div.console-list-body
     //- 系统控制按钮
     div.console-btn-group
         div.console-btn-item#darkItem
