--- a/themes/sxiaohe/layout/includes/layout.pug
+++ b/themes/sxiaohe/layout/includes/layout.pug
@@ -45,7 +45,7 @@ html(lang=config.language data-theme=theme.display_mode class=htmlClassHideAside
     else
       include ./404.pug
 
-    include ./sxiaohe_pug/console.pug
+    //- include ./sxiaohe_pug/console.pug
     include ./rightside.pug
     !=partial('includes/third-party/search/index', {}, {cache: true})
     include ./additional-js.pug
