--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/widget/Floating_telescopic_sidebar.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/widget/Floating_telescopic_sidebar.pug
@@ -10,7 +10,7 @@
     .blok
     .text
       .strip
-      <div class="post-reward"><button class="tip-button reward-button"><span class="tip-button__text">投 喂</span><div class="reward-main"><ul class="reward-all"><li class="reward-item"><a class="about-reward" href="" target="_blank"><img class="post-qr-code-img" src="" alt="微信"></a><div class="post-qr-code-desc">微信</div></li><li class="reward-item"><a class="about-reward" href="" target="_blank"><img class="post-qr-code-img" src="" alt="支付宝"></a><div class="post-qr-code-desc">支付宝</div></li></ul></div></button></div>
+      <div class="post-reward"><div class="reward-main"><ul class="reward-all"><li class="reward-item"><a class="about-reward" href="" target="_blank"><img class="post-qr-code-img" src="" alt="微信"></a><div class="post-qr-code-desc">微信</div></li><li class="reward-item"><a class="about-reward" href="" target="_blank"><img class="post-qr-code-img" src="" alt="支付宝"></a><div class="post-qr-code-desc">支付宝</div></li></ul></div><button class="tip-button reward-button"><span class="tip-button__text">投 喂</span></button></div>
   .option
     i.fas.fa-music
     .blokbottom
