--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
@@ -2248,6 +2248,55 @@ style.
   .relatedPosts>.relatedPosts-list>div {
     border-radius: 18px;
   }
+  /* 19.文章展开区域调整 */
+  details.folding-tag[open] >div.content {
+    padding: 16px;
+    margin: -16px;
+    margin-top: 0;
+  }
+  [data-theme="dark"] details[open] > div.content {
+    padding: 16px;
+    margin: -16px;
+    margin-top: 0;
+    background: #2c2d2d;
+    color: rgba(255, 255, 255, 0.6);
+  }
+  details.folding-tag[open][cyan] >summary {
+    border-bottom-color: rgba(27, 205, 252, 0.3);
+  }
+  details.folding-tag[open] >summary {
+    color: #444;
+    margin-bottom: 0;
+  }
+  details.folding-tag[open] >summary {
+    border-bottom: 1px solid rgba(68, 68, 68, 0.2);
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+  details.folding-tag summary {
+    cursor: pointer;
+    padding: 16px;
+    margin: -16px;
+    border-radius: 4px;
+    color: rgba(68, 68, 68, 0.7);
+    font-size: 0.875rem !important;
+    font-weight: bold;
+    position: relative;
+    line-height: normal;
+  }
+  details.folding-tag {
+    display: block;
+    padding: 16px;
+    margin: 1em 0;
+    border-radius: 4px;
+    background: #fff;
+    font-size: var(--global-font-size);
+    transition: all 0.28s ease;
+    -moz-transition: all 0.28s ease;
+    -webkit-transition: all 0.28s ease;
+    -o-transition: all 0.28s ease;
+    border: 1px solid #f6f6f6;
+  }
   /* 模块化调整 */
   /* 由苏晓河进行编写以及调整 */
   /* 时间：2025年2月4日 */
