--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
@@ -3255,3 +3255,19 @@ style.
   width: 12em;
   color: var(--card-friend-descr-color);
   }
+  /*哔哩哔哩视频适配*/
+  .aspect-ratio {
+    position: relative;
+    width: 90%;
+    height: auto;
+    padding-bottom: 75%;
+    margin: 3% auto;
+    text-align: center;
+  }
+  .aspect-ratio iframe {
+    position: absolute;
+    width: 100%;
+    height: 86%;
+    left: 0;
+    top: 0;
+  }
