--- a/themes/sxiaohe/layout/includes/header/post-info.pug
+++ b/themes/sxiaohe/layout/includes/header/post-info.pug
@@ -1,6 +1,50 @@
 - let comments = theme.comments
 #post-info(data-cover=url_for(page.cover))
-
+  style.
+    /* 移动端文章信息美化 */
+    #post-info #post-meta .post-meta-icon, #post-info #post-meta .post-meta-label {
+      margin-right: 4px;
+    }
+    @media screen and (max-width: 768px) {
+      #post>#post-info {
+        text-align: center;
+        padding: 30px 8px;
+        height: fit-content;
+      }
+      #post>#post-info .post-title {
+        font-size: 29px !important;
+        padding: 0 10px;
+      }
+      #post-info .iconfont {
+        display: none;
+      }
+      #post-info #post-meta>.meta-firstline, #post-info #post-meta>.meta-secondline {
+        display: inline;
+      }
+      #post-info #post-meta {
+        font-size: 94%;
+      }
+      #post-info #post-meta-top .post-categories {
+        position: absolute;
+        left: 10px;
+        top: 0;
+        background-color: #49b0f5b9;
+        padding: 0 10px;
+        display: -webkit-box;
+        display: -moz-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: box;
+        display: flex;
+        -webkit-box-align: center;
+        -moz-box-align: center;
+        -o-box-align: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
+        align-items: center;
+        border-radius: 0 0 10px 10px;
+      }
+    }
   #post-meta-top
     if (theme.post_meta.post.categories && page.categories.data.length > 0)
       each item, index in page.categories.data
@@ -40,6 +84,13 @@
           time(datetime=date_xml(page[date_type]) title=date_title + ' ' + full_date(page[date_type]))=date(page[date_type], config.date_format)
 
     .meta-secondline
+      style.
+        /* 字数统计消失修复 */
+        @media screen and (min-width: 768px) {
+          #post-info #post-meta>.meta-secondline>span:first-child {
+            display: flex!important;
+          }
+        }
       - let postWordcount = theme.wordcount.enable && (theme.wordcount.post_wordcount || theme.wordcount.min2read)
       if (postWordcount)
         span.post-meta-wordcount
