--- a/themes/sxiaohe/layout/includes/header/post-info.pug
+++ b/themes/sxiaohe/layout/includes/header/post-info.pug
@@ -192,5 +192,5 @@
           when 'Artalk'
             +countBlock
               a(href=url_for(page.path) + '#post-comment')
-                span.artalk-count
+                span.artalk-count(style="color:#fff;")
                   i.fa-solid.fa-spinner.fa-spin
