--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
@@ -2292,6 +2292,15 @@ style.
     -o-transition: all 0.28s ease;
     border: 1px solid #f6f6f6;
   }
+  /* 20.文章序列美化 */
+  #article-container li::marker {
+    color: var(--theme-color) !important;
+  }
+  #article-container li::marker {
+    color: #49b1f5;
+    font-weight: 600;
+    font-size: 1.05em;
+  }
   /* 模块化调整 */
   /* 由苏晓河进行编写以及调整 */
   /* 时间：2025年2月4日 */
