--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
@@ -2294,13 +2294,16 @@ style.
   }
   /* 20.文章序列美化 */
   #article-container li::marker {
-    color: var(--theme-color) !important;
+    color: #00c4b6 !important;
   }
   #article-container li::marker {
-    color: #49b1f5;
     font-weight: 600;
     font-size: 1.2em;
   }
+  ol {
+    padding-inline-start: 20px;
+  }
+  
   /* 模块化调整 */
   /* 由苏晓河进行编写以及调整 */
   /* 时间：2025年2月4日 */
