--- a/themes/sxiaohe/layout/includes/page/flink_css.pug
+++ b/themes/sxiaohe/layout/includes/page/flink_css.pug
@@ -268,3 +268,8 @@ style.
   .site-card .info {
     margin: 6px 5px 7px;
   }
+style.
+  .addBtn button:hover {
+    background: var(--global-bg);
+    color: var(--search-result-title);
+  }
