--- a/themes/sxiaohe/layout/includes/footer.pug
+++ b/themes/sxiaohe/layout/includes/footer.pug
@@ -1,4 +1,5 @@
 #footer-wrap
+  .js-pjax
   #footer_icon
     .icon_left
       a.icon_link(href="http://foreverblog.cn/go.html" rel="noopener external nofollow" target="_blank" title="虫洞-随机访问十年之约成员博客")
