--- a/themes/sxiaohe/layout/page.pug
+++ b/themes/sxiaohe/layout/page.pug
@@ -10,8 +10,8 @@ block content
         h1.page-title= page.title
 
     case page.type
-      when 'jike'
-        include includes/sxiaohe_pug/page/jike.pug
+      when 'essays'
+        include includes/sxiaohe_pug/page/essays.pug
       when 'essay'
         include includes/sxiaohe_pug/page/essay.pug
       when 'about'
