--- a/themes/sxiaohe/layout/includes/additional-style.pug
+++ b/themes/sxiaohe/layout/includes/additional-style.pug
@@ -4,3 +4,5 @@ include ./sxiaohe_pug/diy_css.pug
 include ./sxiaohe_pug/page_style.pug
 //- 安知鱼图标字体自定义
 include ./sxiaohe_pug/font/anzhiyu_css.pug
+//- 评论自定义样式·
+include ./sxiaohe_pug/comment_css.pug
