--- a/themes/sxiaohe/layout/archive.pug
+++ b/themes/sxiaohe/layout/archive.pug
@@ -5,7 +5,7 @@ block content
   #archive
     - const archiveLength = findArchiveLength(fragment_cache)
     .article-sort-title= _p('page.articles') + ' - ' + archiveLength
-    +articleSort(page.posts)
+    +articleSort(page.posts, page.current)
     include includes/pagination.pug
     style.
       @media screen and (max-width: 600px) {
