--- a/themes/sxiaohe/layout/includes/mixins/article-sort.pug
+++ b/themes/sxiaohe/layout/includes/mixins/article-sort.pug
@@ -1,4 +1,4 @@
-mixin articleSort(posts)
+mixin articleSort(posts, current)
   .article-sort
     - var year
     - posts.each(function (article) {
@@ -15,7 +15,7 @@ mixin articleSort(posts)
             img(src=url_for(article.cover) alt=title onerror=`this.onerror=null;this.src='${url_for(theme.error_img.post_page)}'`)
         .article-sort-item-info
           a.article-sort-item-title(href=url_for(article.path) title=title)= title
-          span.article-sort-item-index
+          span.article-sort-item-index= (current - 1) * config.per_page + post_index + 1
           .article-sort-meta
             .article-meta-wrap
               if (theme.post_meta.page.categories && article.categories.data.length > 0)
