--- a/themes/sxiaohe/layout/tag.pug
+++ b/themes/sxiaohe/layout/tag.pug
@@ -10,5 +10,5 @@ block content
     include ./includes/mixins/article-sort.pug
     #tag
       .article-sort-title= _p('page.tag') + ' - ' + page.tag
-      +articleSort(page.posts)
+      +articleSort(page.posts, page.current)
       include includes/pagination.pug
