--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
@@ -2303,6 +2303,16 @@ style.
   ol {
     padding-inline-start: 20px;
   }
+  /* 21.归档、分类、标签的文章卡片序列美化 */
+  span.article-sort-item-index {
+    opacity: .5;
+    position: absolute;
+    top: .5rem;
+    right: .5rem;
+    font-style: italic;
+    font-size: 2.5rem;
+    line-height: 1.5rem;
+  }
   /* 模块化调整 */
   /* 由苏晓河进行编写以及调整 */
   /* 时间：2025年2月4日 */
