--- a/themes/sxiaohe/source/css/_sxiaohe_page_style/essay/anzhiyuMainEssay.css
+++ b/themes/sxiaohe/source/css/_sxiaohe_page_style/essay/anzhiyuMainEssay.css
@@ -1,13 +1,13 @@
-#page:has(#essay_page) {
+body[data-type="essay"] #page {
   border: 0;
   box-shadow: none !important;
   padding: 0 !important;
   background: transparent !important;
 }
-#page:has(#essay_page) .page-title {
+body[data-type="essay"] #page .page-title {
   display: none;
 }
-#web_bg ~ .page:has(#essay_page) {
+body[data-type="essay"] #web_bg {
   background: var(--anzhiyu-background);
 }
 #bber .bber-container-img {
@@ -25,17 +25,42 @@
 #bber .bber-content-img img {
   object-fit: cover;
   max-height: 100%;
-  border-radius: 12px;
 }
 
-#bber .bber-content-img {
+#bber .bber-content-img,
+#bber .bber-content-video {
   height: 100px;
-  border-radius: 12px;
+  border-radius: 8px;
   overflow: hidden;
   display: flex;
+  justify-content: center;
   position: relative;
   width: calc(100% / 4 - 5px);
   margin-bottom: 10px;
+}
+
+#bber .bber-content-video video {
+  border-radius: 8px;
+  object-fit: cover;
+  max-height: 100%;
+}
+#bber .bber-content-video::after {
+  content: "视频";
+  display: inline-block;
+  padding: 1px 6px;
+  background: var(--anzhiyu-black-op);
+  border-radius: 8px;
+  margin-left: 4px;
+  font-size: 12px;
+  font-weight: 700;
+  color: var(--anzhiyu-white);
+  backdrop-filter: saturate(180%) blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  transform: translateZ(0);
+  position: absolute;
+  left: 0;
+  top: 4px;
+  z-index: 2;
 }
 
 #bber .bber-content .datacont {
@@ -128,12 +153,19 @@
   align-items: center;
 }
 
-#bber .bber-info .far.fa-clock {
+#bber .bber-info .anzhiyufont.anzhiyu-icon-clock {
   margin-right: 4px;
+  font-size: 0.7rem;
 }
 #bber > section > ul > li > div .bber-info-from span,
 #bber > section > ul > li > div .bber-info-from {
   margin-left: 4px;
+}
+#bber > section > ul > li > div .bber-info-from i {
+  font-size: 0.7rem;
+}
+#bber .bber-item hr::before {
+  display: none;
 }
 
 #bber .bber-bottom {
@@ -143,8 +175,13 @@
   margin-top: 10px;
 }
 
-#bber .bber-bottom .bber-reply {
-  cursor: pointer;
+.bber-reply {
+  cursor: pointer !important;
+}
+
+.bber-reply:hover {
+  color: var(--anzhiyu-main);
+  max-height: 35px;
 }
 
 #bber .timeline ul li.bber-item:hover {
@@ -163,6 +200,7 @@
 }
 #bber .bber-content-link i {
   margin-right: 3px;
+  font-size: 0.7rem;
 }
 #bber .bber-content-link:hover {
   background-color: var(--anzhiyu-main);
@@ -234,19 +272,19 @@
 /* 顶部样式 */
 .author-content.author-content-item.essayPage {
   height: 19rem;
-  background: url(https://img02.anheyu.com/adminuploads/1/2022/08/21/630249e2df20f.jpg) left 28% / cover no-repeat;
   color: var(--anzhiyu-white);
   overflow: hidden;
   margin-top: 0px;
 }
-#page:has(#essay_page) .author-content-item .card-content .banner-button-group .banner-button:hover {
+body[data-type="essay"] #page .author-content-item .card-content .banner-button-group .banner-button:hover {
   color: var(--anzhiyu-white);
   border-radius: 20px !important;
 }
 
 /* 响应式 */
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1200px) {
   #bber .timeline ul li.bber-item {
+    width: 49%;
     margin-right: 1%;
   }
 }
@@ -264,4 +302,8 @@
 }
 #bber .aplayer .aplayer-lrc p {
   color: var(--anzhiyu-fontcolor);
+  min-height: 40px;
+  line-height: 30px !important;
+  height: 40px !important;
+  margin: 0 !important;
 }
