--- a/themes/sxiaohe/layout/includes/header/nav.pug
+++ b/themes/sxiaohe/layout/includes/header/nav.pug
@@ -39,9 +39,9 @@ nav#nav
         a.site-page(data-pjax-state="external" draggable="false" href="https://www.travellings.cn/go.html" rel="external nofollow" title="随机前往一个开往项目网站")
           i.anzhiyu-icon-train.anzhiyufont
       
-      #console-switch.nav-button
-        a.console-switch-btn(data-pjax-state="external" href="javascript:void(0);" onclick="ctrl.showConsole()" rel="external nofollow" title="控制中心")
-          i.anzhiyu-icon-train.anzhiyufont
+      //- #console-switch.nav-button
+      //-   a.console-switch-btn(data-pjax-state="external" href="javascript:void(0);" onclick="ctrl.showConsole()" rel="external nofollow" title="控制中心")
+      //-     i.anzhiyu-icon-train.anzhiyufont
       
     .nav-button#toggle-menu
       a.site-page
