--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
@@ -1587,37 +1587,42 @@ style.
   /* 时间：2025年2月4日 */
 
   /* 分类页 */
-  .category-lists .category-list {
+  #page .category-lists ul {
     text-align: center;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    flex-direction: row;
+    margin-bottom: 5px;
+  }
+  .category-lists .category-list {
+    margin-bottom: 0;
   }
   .category-lists ul {
-    padding: 0;
+    padding: 0 0 0 20px;
+  }
+  .category-lists ul {
+    list-style: none;
+  }
+  #page .category-lists ul li {
+    margin: .3rem;
+    background: #ffffff50;
+    border-radius: 8px;
+    display: inline-block;
+    padding-right: 5px;
+    padding-left: 5px;
+    margin-bottom: 10px;
   }
   .category-lists ul li {
-    display: flex;
-    width: fit-content;
-    font-size: 1.2em !important;
-    padding: 0.2em 0.5em;
-    background: var(--june-card-bg);
-    margin: 0.5em 0.5em;
-    border-radius: 12px;
-    -webkit-backface-visibility: hidden;
-    -webkit-transform-style: preserve-3d;
-    border: var(--style-border-always);
-    box-shadow: var(--june-shadow-border);
-    align-items: center;
+    position: relative;
+    margin: 6px 0;
+    padding: .12em .4em .12em 1.4em;
   }
-  .category-lists .category-list a {
-    color: var(--june-fontcolor) !important;
+  .category-lists ul li, .list-beauty li {
+    position: relative;
+    padding: .12em .4em .12em 1.4em;
   }
-  .category-lists .category-list a:hover {
-    color: var(--june-blue) !important;
+  #page .category-lists ul li:before {
+    left: 5px;
+    border: 3px solid #425aef;
   }
-  .category-lists ul li:before {
+  .category-lists ul li:before, .list-beauty li:before {
     position: absolute;
     top: .67em;
     left: 0;
@@ -1634,21 +1639,24 @@ style.
     -ms-transition: all .3s ease-out;
     transition: all .3s ease-out;
   }
-  .category-lists .category-list .category-list-count {
-    background: var(--june-secondbg);
-    padding: 4px 4px;
-    border-radius: 6px;
-    color: var(--june-secondtext);
-    line-height: 1;
-    text-align: center;
-    min-width: 35px;
-    display: inline-block;
-    font-size: 1rem;
-    box-shadow: var(--june-shadow-border);
+  div#page .category-lists .category-list a {
+    font-size: 16px;
   }
-  .category-lists .category-list .category-list-count:before,
+  .category-lists .category-list a {
+    padding-left: 18px;
+  }
+  .category-lists .category-list a {
+    color: var(--font-color);
+  }
+  .category-lists .category-list .category-list-count {
+    margin-left: 8px;
+    color: #858585;
+  }
+  .category-lists .category-list .category-list-count:before {
+    content: '(';
+  }
   .category-lists .category-list .category-list-count:after {
-    content: '';
+    content: ')';
   }
   /* 归档，分类，标签三个页面调整 */
   /* 由苏晓河进行编写以及调整 */
