--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/page/flink.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/page/flink.pug
@@ -1,4 +1,9 @@
 #article-container
+  style.
+    div#page {
+      border-radius: 18px;
+      padding: 10px 35px;
+    }
   .flink
     if site.data.link
       each i in site.data.link
