--- a/themes/sxiaohe/layout/includes/mixins/post-ui.pug
+++ b/themes/sxiaohe/layout/includes/mixins/post-ui.pug
@@ -67,6 +67,14 @@ mixin postUI(posts)
                 a(href=url_for(item.path)).article-meta__tags #[=item.name]
                 if (index < article.tags.data.length - 1)
                   span.article-meta-link #[='•']
+          //- - let postWordcount = theme.wordcount.enable && theme.wordcount.post_wordcount
+          //- if (postWordcount)
+          //-   span.post-meta-wordcount
+          //-     span.article-meta-separator |
+          //-     if theme.wordcount.post_wordcount
+          //-       i.iconfont.icon-tongji1.fa-fw.post-meta-icon
+          //-       span.post-meta-label= _p('post.wordcount') + ':'
+          //-       span.word-count= wordcount(page.content)
           
           mixin countBlockInIndex
             - needLoadCountJs = true
