--- a/themes/sxiaohe/source/css/index.styl
+++ b/themes/sxiaohe/source/css/index.styl
@@ -14,3 +14,4 @@ if hexo-config('css_prefix')
 @import '_sxiaohe_page_styl/**/*'
 @import './console.css'
 @import './calendar.css'
+@import './coin.css'
