--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
@@ -2186,9 +2186,9 @@ style.
     animation: fadenum1 .6s 1;
   }
   /* 12.修复悬浮侧边栏问题 */
-  .post-reward {
+  .post-reward.reward-card {
     position: relative;
-    margin-top: 0!important;
+    margin-top: 0;
     width: 100%;
     text-align: center;
     pointer-events: none;
