新增文章内容

--- a/themes/sxiaohe/layout/page.pug
+++ b/themes/sxiaohe/layout/page.pug
@@ -18,6 +18,8 @@ block content
         include includes/sxiaohe_pug/page/about.pug
       when 'equipment'
         include includes/sxiaohe_pug/page/equipment.pug
+      when 'hypergrygh'
+        include includes/sxiaohe_pug/page/hypergrygh.pug
       when 'tags'
         include includes/page/tags.pug
       when 'link'
