--- a/themes/sxiaohe/layout/includes/loading/fullpage-loading.pug
+++ b/themes/sxiaohe/layout/includes/loading/fullpage-loading.pug
@@ -1,23 +1,186 @@
-#loading-box(onclick='document.getElementById("loading-box").classList.add("loaded")')
-  .loading-bg
-    div.loading-img
-    .loading-image-dot
+//- ._b775b841(style="transform: translateY(0px);")
+//-   ._7c7241c0
+//-     ._dd208b33
+//-       ._369c736f._8f5b35e5
+//-         ._b4aa8560
+//-           svg(viewBox="0 0 254 119")
+//-             use(xlink:href="#svg_def-title_arknights")
+//-         ._fa9747ca
+//-           ._4f8ab24e
+//-             svg(viewBox="0 0 166 18")
+//-               use(xlink:href="#svg_def-copyright_mini")
+//-           ._ad713ab8
+//-             ._6e475a05
+//-               ._bfb96139
+//-               ._be495656(style="width: 100%;")
+//-             ._456f799b
+//-               ._65701373
+//-                 svg._c50a93aa(viewBox="0 0 13 11")
+//-                   use(xlink:href="#svg_def-icon_dblArrow")
+//-                 span LOADING&nbsp;-&nbsp;
+//-                 span 100
+//-                 | % &nbsp;
+//-                 span ......
+//-               ._ca6c1de2
+//-                 span._bc36373f ARKNIGHTS
+//-                 span._3f978d81
+//-                   | //
+//-                   // 
+//-                   | nbsp;&nbsp;&nbsp;&nbsp;
+//-                   // 
+//-                   | ttps://ak.hypergryph.com/
+//- style.
+//-   ._b775b841 {
+//-     position: relative;
+//-     width: 100%;
+//-     height: 100%;
+//-     transition-property: transform;
+//-     transition-duration: .6s;
+//-   }
+//-   ._7c7241c0 {
+//-     width: 100%;
+//-     height: 100%;
+//-     background-image: url(https://web.hycdn.cn/arknights/official/_next/static/media/bg.c03d00a6.jpg);
+//-     background-position: 50%;
+//-     background-size: cover;
+//-     background-repeat: no-repeat;
+//-   }
+//-   ._7c7241c0 ._dd208b33, ._7c7241c0 ._dd208b33 ._ddf4d292 {
+//-     position: relative;
+//-     width: 100%;
+//-     height: 100%;
+//-   }
+//-   ._7c7241c0 ._dd208b33 {
+//-     max-width: 180rem;
+//-     margin: auto;
+//-   }
+//-   ._369c736f._8f5b35e5 {
+//-     opacity: 0;
+//-     visibility: hidden;
+//-   }
 
-script.
-  const preloader = {
-    endLoading: () => {
-      document.body.style.overflow = 'auto';
-      document.getElementById('loading-box').classList.add("loaded")
-    },
-    initLoading: () => {
-      document.body.style.overflow = '';
-      document.getElementById('loading-box').classList.remove("loaded")
+//-   ._369c736f {
+//-     position: absolute;
+//-     top: 0;
+//-     left: 0;
+//-     width: 100%;
+//-     height: 100%;
+//-     z-index: 24;
+//-     background-color: #272727;
+//-     padding-top: 8rem;
+//-     display: flex;
+//-     flex-direction: column;
+//-     align-items: center;
+//-     justify-content: center;
+//-     color: #a4a4a4;
+//-     transition: opacity 1s, visibility 1s;
+//-   }
+//-   ._369c736f._8f5b35e5:before {
+//-     top: -.25rem;
+//-   }
+//-   ._369c736f:after, ._369c736f:before {
+//-     transition: top 1s, right 1s;
+//-   }
+//-   ._369c736f:before {
+//-     width: 100%;
+//-     height: 1px;
+//-     left: 0;
+//-     top: 6.625rem;
+//-   }
+//-   ._369c736f:after, ._369c736f:before {
+//-     content: "";
+//-     display: block;
+//-     position: absolute;
+//-     background-color: hsla(0, 0%, 100%, .3);
+//-   }
+//-   ._369c736f ._b4aa8560 {
+//-     width: 15.875rem;
+//-   }
+//-   ._7c7241c0 svg {
+//-     pointer-events: none;
+//-   }
+//-   ._7c7241c0 img, ._7c7241c0 svg {
+//-     display: block;
+//-     width: 100%;
+//-     height: auto;
+//-   }
+//-   ._369c736f ._fa9747ca {
+//-     margin-top: 20.125rem;
+//-     display: flex
+//-   ;
+//-     align-items: flex-end;
+//-   }
+//-   ._369c736f ._fa9747ca ._4f8ab24e {
+//-     flex: none;
+//-     margin-left: auto;
+//-     margin-right: 18.125rem;
+//-     width: 10.5rem;
+//-   }
+//-   ._7c7241c0 svg {
+//-     pointer-events: none;
+//-   }
+//-   ._7c7241c0 img, ._7c7241c0 svg {
+//-     display: block;
+//-     width: 100%;
+//-     height: auto;
+//-   }
+//-   ._369c736f ._fa9747ca ._ad713ab8 {
+//-     flex: none;
+//-     margin-right: auto;
+//-     width: 68.5rem;
+//-   }
+//-   ._369c736f ._fa9747ca ._ad713ab8 ._6e475a05 {
+//-     position: relative;
+//-     width: 100%;
+//-     height: 6px;
+//-     border-left: 6px solid #a4a4a4;
+//-     border-right: 6px solid #a4a4a4;
+//-     display: flex
+//-   ;
+//-     align-items: center;
+//-   }
+//-   ._369c736f ._fa9747ca ._ad713ab8 ._6e475a05 ._bfb96139 {
+//-     width: 100%;
+//-     height: 2px;
+//-     background-color: #a4a4a4;
+//-   }
+//-   ._369c736f ._fa9747ca ._ad713ab8 ._6e475a05 ._be495656 {
+//-     position: absolute;
+//-     height: 100%;
+//-     left: 0;
+//-     top: 0;
+//-     background-color: #18d1ff;
+//-   }
+//-   ._369c736f ._fa9747ca ._ad713ab8 ._456f799b {
+//-     margin-top: .75rem;
+//-     display: flex
+//-   ;
+//-     align-items: center;
+//-     justify-content: space-between;
+//-   }
+//-   ._369c736f ._fa9747ca ._ad713ab8 ._456f799b ._65701373 {
+//-     display: flex
+//-   ;
+//-     align-items: center;
+//-     font-family: Bender-Bold;
+//-   }
+//-   ._369c736f ._fa9747ca ._ad713ab8 ._456f799b ._65701373 ._c50a93aa {
+//-     width: .75rem;
+//-     margin-right: 1rem;
+//-   }
 
-    }
-  }
-  window.addEventListener('load',()=> { preloader.endLoading() })
-
-  if (!{theme.pjax && theme.pjax.enable}) {
-    document.addEventListener('pjax:send', () => { preloader.initLoading() })
-    document.addEventListener('pjax:complete', () => { preloader.endLoading() })
-  }
+//-   ._7c7241c0 svg {
+//-     pointer-events: none;
+//-   }
+//-   ._7c7241c0 img, ._7c7241c0 svg {
+//-     display: block;
+//-     width: 100%;
+//-     height: auto;
+//-   }
+//-   ._369c736f ._fa9747ca ._ad713ab8 ._456f799b ._ca6c1de2 ._bc36373f {
+//-     font-family: Bender-Bold;
+//-     margin-right: 2rem;
+//-   }
+//-   ._369c736f ._fa9747ca ._ad713ab8 ._456f799b ._ca6c1de2 ._3f978d81 {
+//-     font-family: Bender-Regular;
+//-   }
