--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
@@ -784,7 +784,7 @@ style.
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    margin: auto;
+    margin: 7%;
     border: 4px solid #f0f0f2;
     animation-duration: 0.3s;
     animation-name: loadingAction;
