--- a/themes/sxiaohe/layout/includes/layout.pug
+++ b/themes/sxiaohe/layout/includes/layout.pug
@@ -16,6 +16,33 @@ html(lang=config.language data-theme=theme.display_mode class=htmlClassHideAside
       
     !=partial('includes/sidebar', {}, {cache: true})
 
+    if page.type === 'wiki_post'
+      #body-wrap(class=pageType)
+        //- include ./header/wiki.pug
+        include ./header/index.pug
+        include ./additional-style.pug
+        include ./sxiaohe_pug/add-js.pug
+        hr
+        main#content-inner.layout(class=hideAside)
+          if body
+            div!= body
+          else
+            block content
+            if theme.aside.enable && page.aside !== false
+              include widget/index.pug
+
+        - var footerBg = theme.footer_bg
+        if (footerBg)
+          if (footerBg === true)
+            - var footer_bg = bg_img
+          else
+            - var footer_bg = theme.footer_bg.indexOf('/') !== -1 ? `background-image: url('${url_for(footerBg)}')` : `background: ${footerBg}`
+        else
+          - var footer_bg = ''
+
+        footer#footer(style="background: rgba(0, 0, 0, 0);")
+          !=partial('includes/footer', {}, {cache: true})
+
     if page.type !== '404'
       #body-wrap(class=pageType)
         include ./header/index.pug
